tests/NormalTests/paczka1/fuzzy1/30440679.err
Error in line 1: RFEG47cK A826 88,5
Error in line 5: RFEG47cK S531 59,6
Error in line 7: ZbS A826 70,2
Error in line 25: iMQ1F A826 56,5
Error in line 28: tvCf4B2r A903 74,8
Error in line 31: A826 A826 2,B
Error in line 22: zie33 A826 87,6
Error in line 35: RFEG47cK A826 79,5
